structure/LineGrammar/LineGrammarParser.py
# Generated from /Users/dpazel/PycharmProjects/music_rep_melody/resources/LineGrammar.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


from structure.LineGrammar.core.line_constructor import LineConstructor
import sys




class LineGrammarParser ( Parser ):

    grammarFileName = "LineGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "']'", "'('", "','", "')'", "':'", 
                     "'/'", "'<'", "'>'", "'@'", "'-'", "<INVALID>", "'{'", 
                     "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "DOT", "TIE", "INT", "LINEBEGIN", 
                      "LINEEND", "WS", "COMMON_DURATION_CHORD_NUMERAL_LETTERS", 
                      "DURATIONLETTER", "ALTERATION", "MODALITY", "CHORDNUMERAL", 
                      "CHORDMODALITY", "NOTELETTERS" ]

    RULE_motif = 0
    RULE_motificElement = 1
    RULE_primitiveNote = 2
    RULE_beam = 3
    RULE_tuplet = 4
    RULE_pitch = 5
    RULE_tone = 6
    RULE_duration = 7
    RULE_durationFraction = 8
    RULE_tonality = 9
    RULE_chordTemplate = 10
    RULE_harmonicTag = 11

    ruleNames =  [ "motif", "motificElement", "primitiveNote", "beam", "tuplet", 
                   "pitch", "tone", "duration", "durationFraction", "tonality", 
                   "chordTemplate", "harmonicTag" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    DOT=10
    TIE=11
    INT=12
    LINEBEGIN=13
    LINEEND=14
    WS=15
    COMMON_DURATION_CHORD_NUMERAL_LETTERS=16
    DURATIONLETTER=17
    ALTERATION=18
    MODALITY=19
    CHORDNUMERAL=20
    CHORDMODALITY=21
    NOTELETTERS=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



        self.lc = LineConstructor();
        self._notelist = list()



    class MotifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LINEBEGIN(self):
            return self.getToken(LineGrammarParser.LINEBEGIN, 0)

        def LINEEND(self):
            return self.getToken(LineGrammarParser.LINEEND, 0)

        def motificElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LineGrammarParser.MotificElementContext)
            else:
                return self.getTypedRuleContext(LineGrammarParser.MotificElementContext,i)


        def getRuleIndex(self):
            return LineGrammarParser.RULE_motif

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMotif" ):
                listener.enterMotif(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMotif" ):
                listener.exitMotif(self)




    def motif(self):

        localctx = LineGrammarParser.MotifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_motif)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(LineGrammarParser.LINEBEGIN)
            self.state = 26 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 25
                self.motificElement()
                self.state = 28 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LineGrammarParser.T__0) | (1 << LineGrammarParser.T__2) | (1 << LineGrammarParser.T__7) | (1 << LineGrammarParser.COMMON_DURATION_CHORD_NUMERAL_LETTERS) | (1 << LineGrammarParser.DURATIONLETTER) | (1 << LineGrammarParser.NOTELETTERS))) != 0)):
                    break

            self.state = 30
            self.match(LineGrammarParser.LINEEND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MotificElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._primitiveNote = None # PrimitiveNoteContext

        def beam(self):
            return self.getTypedRuleContext(LineGrammarParser.BeamContext,0)


        def tuplet(self):
            return self.getTypedRuleContext(LineGrammarParser.TupletContext,0)


        def primitiveNote(self):
            return self.getTypedRuleContext(LineGrammarParser.PrimitiveNoteContext,0)


        def harmonicTag(self):
            return self.getTypedRuleContext(LineGrammarParser.HarmonicTagContext,0)


        def getRuleIndex(self):
            return LineGrammarParser.RULE_motificElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMotificElement" ):
                listener.enterMotificElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMotificElement" ):
                listener.exitMotificElement(self)




    def motificElement(self):

        localctx = LineGrammarParser.MotificElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_motificElement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 36
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [LineGrammarParser.T__2, LineGrammarParser.COMMON_DURATION_CHORD_NUMERAL_LETTERS, LineGrammarParser.DURATIONLETTER, LineGrammarParser.NOTELETTERS]:
                    self.state = 32
                    localctx._primitiveNote = self.primitiveNote()
                    self.lc.add_note(localctx._primitiveNote.n)
                    pass
                elif token in [LineGrammarParser.T__7]:
                    self.state = 35
                    self.harmonicTag()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.state = 38
                self.beam()
                pass

            elif la_ == 3:
                self.state = 39
                self.tuplet()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimitiveNoteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.n = None
            self.dots = 0
            self.dur = None
            self.ties = False
            self._duration = None # DurationContext
            self._pitch = None # PitchContext

        def pitch(self):
            return self.getTypedRuleContext(LineGrammarParser.PitchContext,0)


        def duration(self):
            return self.getTypedRuleContext(LineGrammarParser.DurationContext,0)


        def TIE(self):
            return self.getToken(LineGrammarParser.TIE, 0)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(LineGrammarParser.DOT)
            else:
                return self.getToken(LineGrammarParser.DOT, i)

        def getRuleIndex(self):
            return LineGrammarParser.RULE_primitiveNote

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitiveNote" ):
                listener.enterPrimitiveNote(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitiveNote" ):
                listener.exitPrimitiveNote(self)




    def primitiveNote(self):

        localctx = LineGrammarParser.PrimitiveNoteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_primitiveNote)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LineGrammarParser.T__2) | (1 << LineGrammarParser.COMMON_DURATION_CHORD_NUMERAL_LETTERS) | (1 << LineGrammarParser.DURATIONLETTER))) != 0):
                self.state = 42
                localctx._duration = self.duration()
                localctx.dur = localctx._duration.d
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LineGrammarParser.DOT:
                    self.state = 44
                    self.match(LineGrammarParser.DOT)
                    localctx.dots = localctx.dots + 1
                    self.state = 50
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 53
            localctx._pitch = self.pitch()
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LineGrammarParser.TIE:
                self.state = 54
                self.match(LineGrammarParser.TIE)
                localctx.ties = True


            localctx.n = self.lc.construct_note(localctx._pitch.p, localctx.dur, localctx.dots, localctx.ties)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BeamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def motificElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LineGrammarParser.MotificElementContext)
            else:
                return self.getTypedRuleContext(LineGrammarParser.MotificElementContext,i)


        def getRuleIndex(self):
            return LineGrammarParser.RULE_beam

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBeam" ):
                listener.enterBeam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBeam" ):
                listener.exitBeam(self)




    def beam(self):

        localctx = LineGrammarParser.BeamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_beam)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(LineGrammarParser.T__0)
            self.lc.start_level()
            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 62
                self.motificElement()
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LineGrammarParser.T__0) | (1 << LineGrammarParser.T__2) | (1 << LineGrammarParser.T__7) | (1 << LineGrammarParser.COMMON_DURATION_CHORD_NUMERAL_LETTERS) | (1 << LineGrammarParser.DURATIONLETTER) | (1 << LineGrammarParser.NOTELETTERS))) != 0)):
                    break

            self.state = 67
            self.match(LineGrammarParser.T__1)
            self.lc.end_level()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TupletContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._duration = None # DurationContext
            self.dur_int = None # Token

        def duration(self):
            return self.getTypedRuleContext(LineGrammarParser.DurationContext,0)


        def INT(self):
            return self.getToken(LineGrammarParser.INT, 0)

        def motificElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LineGrammarParser.MotificElementContext)
            else:
                return self.getTypedRuleContext(LineGrammarParser.MotificElementContext,i)


        def getRuleIndex(self):
            return LineGrammarParser.RULE_tuplet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTuplet" ):
                listener.enterTuplet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTuplet" ):
                listener.exitTuplet(self)




    def tuplet(self):

        localctx = LineGrammarParser.TupletContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tuplet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(LineGrammarParser.T__2)
            self.state = 71
            localctx._duration = self.duration()
            self.state = 72
            self.match(LineGrammarParser.T__3)
            self.state = 73
            localctx.dur_int = self.match(LineGrammarParser.INT)
            self.state = 74
            self.match(LineGrammarParser.T__4)
            self.state = 75
            self.match(LineGrammarParser.T__0)
            self.lc.start_level(localctx._duration.d, dur_int=(0 if localctx.dur_int is None else int(localctx.dur_int.text)))
            self.state = 78 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 77
                self.motificElement()
                self.state = 80 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LineGrammarParser.T__0) | (1 << LineGrammarParser.T__2) | (1 << LineGrammarParser.T__7) | (1 << LineGrammarParser.COMMON_DURATION_CHORD_NUMERAL_LETTERS) | (1 << LineGrammarParser.DURATIONLETTER) | (1 << LineGrammarParser.NOTELETTERS))) != 0)):
                    break

            self.state = 82
            self.match(LineGrammarParser.T__1)
            self.lc.end_level()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PitchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.p = None
            self.tt = None
            self.alert = None
            self.reg = None
            self._tone = None # ToneContext
            self._INT = None # Token

        def tone(self):
            return self.getTypedRuleContext(LineGrammarParser.ToneContext,0)


        def INT(self):
            return self.getToken(LineGrammarParser.INT, 0)

        def getRuleIndex(self):
            return LineGrammarParser.RULE_pitch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPitch" ):
                listener.enterPitch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPitch" ):
                listener.exitPitch(self)




    def pitch(self):

        localctx = LineGrammarParser.PitchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_pitch)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            localctx._tone = self.tone()
            localctx.tt = localctx._tone.t
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LineGrammarParser.T__5:
                self.state = 87
                self.match(LineGrammarParser.T__5)
                self.state = 88
                localctx._INT = self.match(LineGrammarParser.INT)
                localctx.reg = (0 if localctx._INT is None else int(localctx._INT.text))


            localctx.p=self.lc.construct_pitch(localctx.tt, localctx.reg)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ToneContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.t = None
            self.ltrs = None # Token

        def NOTELETTERS(self):
            return self.getToken(LineGrammarParser.NOTELETTERS, 0)

        def getRuleIndex(self):
            return LineGrammarParser.RULE_tone

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTone" ):
                listener.enterTone(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTone" ):
                listener.exitTone(self)




    def tone(self):

        localctx = LineGrammarParser.ToneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tone)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            localctx.ltrs = self.match(LineGrammarParser.NOTELETTERS)
            localctx.t=LineConstructor.construct_tone_from_tone_letters((None if localctx.ltrs is None else localctx.ltrs.text))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DurationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.d = None
            self._DURATIONLETTER = None # Token
            self._COMMON_DURATION_CHORD_NUMERAL_LETTERS = None # Token
            self._durationFraction = None # DurationFractionContext

        def DURATIONLETTER(self):
            return self.getToken(LineGrammarParser.DURATIONLETTER, 0)

        def COMMON_DURATION_CHORD_NUMERAL_LETTERS(self):
            return self.getToken(LineGrammarParser.COMMON_DURATION_CHORD_NUMERAL_LETTERS, 0)

        def durationFraction(self):
            return self.getTypedRuleContext(LineGrammarParser.DurationFractionContext,0)


        def getRuleIndex(self):
            return LineGrammarParser.RULE_duration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDuration" ):
                listener.enterDuration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDuration" ):
                listener.exitDuration(self)




    def duration(self):

        localctx = LineGrammarParser.DurationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_duration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LineGrammarParser.DURATIONLETTER]:
                self.state = 97
                localctx._DURATIONLETTER = self.match(LineGrammarParser.DURATIONLETTER)
                localctx.d = LineConstructor.construct_duration_by_shorthand((None if localctx._DURATIONLETTER is None else localctx._DURATIONLETTER.text)) 
                pass
            elif token in [LineGrammarParser.COMMON_DURATION_CHORD_NUMERAL_LETTERS]:
                self.state = 99
                localctx._COMMON_DURATION_CHORD_NUMERAL_LETTERS = self.match(LineGrammarParser.COMMON_DURATION_CHORD_NUMERAL_LETTERS)
                localctx.d = LineConstructor.construct_duration_by_shorthand((None if localctx._COMMON_DURATION_CHORD_NUMERAL_LETTERS is None else localctx._COMMON_DURATION_CHORD_NUMERAL_LETTERS.text)) 
                pass
            elif token in [LineGrammarParser.T__2]:
                self.state = 101
                self.match(LineGrammarParser.T__2)
                self.state = 102
                localctx._durationFraction = self.durationFraction()
                self.state = 103
                self.match(LineGrammarParser.T__4)
                localctx.d = LineConstructor.construct_duration(localctx._durationFraction.f[0], localctx._durationFraction.f[1])
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DurationFractionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.f = None
            self.numerator = None # Token
            self.denominator = None # Token

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(LineGrammarParser.INT)
            else:
                return self.getToken(LineGrammarParser.INT, i)

        def getRuleIndex(self):
            return LineGrammarParser.RULE_durationFraction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDurationFraction" ):
                listener.enterDurationFraction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDurationFraction" ):
                listener.exitDurationFraction(self)




    def durationFraction(self):

        localctx = LineGrammarParser.DurationFractionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_durationFraction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            localctx.numerator = self.match(LineGrammarParser.INT)
            self.state = 109
            self.match(LineGrammarParser.T__5)
            self.state = 110
            localctx.denominator = self.match(LineGrammarParser.INT)
            localctx.f = ((0 if localctx.numerator is None else int(localctx.numerator.text)), (0 if localctx.denominator is None else int(localctx.denominator.text)))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TonalityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tonal = None
            self.modal_index = 0
            self._tone = None # ToneContext
            self._MODALITY = None # Token
            self._INT = None # Token

        def tone(self):
            return self.getTypedRuleContext(LineGrammarParser.ToneContext,0)


        def TIE(self):
            return self.getToken(LineGrammarParser.TIE, 0)

        def MODALITY(self):
            return self.getToken(LineGrammarParser.MODALITY, 0)

        def INT(self):
            return self.getToken(LineGrammarParser.INT, 0)

        def getRuleIndex(self):
            return LineGrammarParser.RULE_tonality

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTonality" ):
                listener.enterTonality(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTonality" ):
                listener.exitTonality(self)




    def tonality(self):

        localctx = LineGrammarParser.TonalityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tonality)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            localctx._tone = self.tone()
            self.state = 114
            self.match(LineGrammarParser.TIE)
            self.state = 115
            localctx._MODALITY = self.match(LineGrammarParser.MODALITY)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LineGrammarParser.T__2:
                self.state = 116
                self.match(LineGrammarParser.T__2)
                self.state = 117
                localctx._INT = self.match(LineGrammarParser.INT)
                localctx.modal_index = (0 if localctx._INT is None else int(localctx._INT.text))
                self.state = 119
                self.match(LineGrammarParser.T__4)


            localctx.tonal = self.lc.construct_tonality(localctx._tone.t, (None if localctx._MODALITY is None else localctx._MODALITY.text), localctx.modal_index)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChordTemplateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ctemplate = None
            self.cm = None
            self.secondary_numeral = None
            self.secondary_modality = None
            self._tone = None # ToneContext
            self._CHORDMODALITY = None # Token
            self._CHORDNUMERAL = None # Token
            self._COMMON_DURATION_CHORD_NUMERAL_LETTERS = None # Token
            self._MODALITY = None # Token

        def tone(self):
            return self.getTypedRuleContext(LineGrammarParser.ToneContext,0)


        def TIE(self):
            return self.getToken(LineGrammarParser.TIE, 0)

        def CHORDMODALITY(self):
            return self.getToken(LineGrammarParser.CHORDMODALITY, 0)

        def CHORDNUMERAL(self, i:int=None):
            if i is None:
                return self.getTokens(LineGrammarParser.CHORDNUMERAL)
            else:
                return self.getToken(LineGrammarParser.CHORDNUMERAL, i)

        def COMMON_DURATION_CHORD_NUMERAL_LETTERS(self, i:int=None):
            if i is None:
                return self.getTokens(LineGrammarParser.COMMON_DURATION_CHORD_NUMERAL_LETTERS)
            else:
                return self.getToken(LineGrammarParser.COMMON_DURATION_CHORD_NUMERAL_LETTERS, i)

        def MODALITY(self):
            return self.getToken(LineGrammarParser.MODALITY, 0)

        def getRuleIndex(self):
            return LineGrammarParser.RULE_chordTemplate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChordTemplate" ):
                listener.enterChordTemplate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChordTemplate" ):
                listener.exitChordTemplate(self)




    def chordTemplate(self):
